create order controller and rename table because sql is an antiquated overprotective language

--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -7,4 +7,8 @@
         <a href="{{ path('app_pizza_index') }}">Pizza</a>
     </p>
 
+    <p>
+        <a href="{{ path('app_order_index') }}">Order</a>
+    </p>
+
 {% endblock %}
