create (new world) order

--- a/templates/Order/index.html.twig
+++ b/templates/Order/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
     <p>
-        <a href="#">New Order</a>
+        <a href="{{ path('app_order_new') }}">New Order</a>
     </p>
 
     <ul>
