--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,22 @@
     {% endblock %}
 </div>
 
+<div class="modal" tabindex="-1" role="dialog" id="selector-modal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Selector</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <div class="modal-body">
+                <iframe src="about:blank" frameborder="0" width="100%" height="400px" id="selector-iframe"></iframe>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% block javascripts %}
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
